[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.run]
branch = true
relative_files = true

[tool.mypy]
disallow_any_unimported = true
show_error_codes = true
strict = true

[tool.poetry]
authors = ["Konstantinos Smanis <konstantinos.smanis@gmail.com>"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Topic :: System :: Systems Administration",
]
description = "Portage configuration linter."
license = "MIT"
name = "niarr"
packages = [{from = "src", include = "niarr"}]
readme = "README.md"
repository = "https://github.com/KSmanis/niarr"
version = "0.1.0"

[tool.poetry.dependencies]
portage = "^3.0.58"
python = "^3.9"

[tool.poetry.group.lint.dependencies]
mypy = "^1.7.1"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
niarr = "niarr.main:cli"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term --cov-report=xml --strict-markers"
testpaths = ["tests"]

[tool.ruff]
extend-select = [
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "I",  # isort
  "PGH",  # pygrep-hooks
  "PIE",  # fkae8-pie
  "PT",  # flake8-pytest-style
  "RUF",  # ruff
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "UP",  # pyupgrade
]
src = ["src"]
target-version = "py39"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-values-type = "tuple"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = []
strict = true

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.per-file-ignores]
"tests/**" = ["S101"]

[tool.tomlsort]
all = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
